# resources/jwt_func/type.go
@@ -1,6 +1,11 @@
 package jwt_func
 
-
+// swagger: Verfica
 type Verfica struct {
 	Token string `json:"token"`
+}
+
+// swagger: RetornoVerificar
+type RetornoVerificar struct {
+	ValidToken bool 
 }
